# FileSystemWatcher

./: ..gitignore.swp  .gitignore  CMakeLists.txt
inc/: AppManager.h  EventTableModel.h  FileManager.h  PathListModel.h
qml/: MainPage.qml  MainView.qml  Theme.qml  main.qml  qml.qrc
qml/contents/: CustomButton.qml  CustomTextField.qml  EventTable.qml  FileDialog.qml  PathList.qml  StyledButton.qml
src/: AppManager.cpp  EventTableModel.cpp  FileManager.cpp  PathListModel.cpp  main.cpp
